Fix z-index on menu

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ label[for="message"] {
     height: 100vh;
     position: absolute;
     background-color: #3c3a39;
+    z-index: 10;
   }
 
   .hidden {
